Updated to Only 2.2

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "only-dev",
+  "name": "only",
   "homepage": "https://github.com/beingstudio/only",
   "authors": [
     "Mikael Vesavuori (Being Studio) <contact@being.se>"
