--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "only-2-dev",
-  "version": "2.1",
-  "description": "Development toward 3.0 (fall)",
+  "name": "only",
+  "version": "2.1.0",
+  "description": "Only Framework. Development toward 3.0 (release fall 2016).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,16 +14,20 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "babel-eslint": "^6.1.2",
+    "babel-preset-es2015": "^6.13.2",
     "browser-sync": "^2.14.0",
     "compass-mixins": "^0.12.10",
     "critical": "^0.7.3",
     "css-mqpacker": "^5.0.1",
-    "cssnano": "^3.7.3",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect-php": "0.0.8",
     "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.1",
@@ -39,6 +43,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.0",
+    "gulp-zip": "^3.2.0",
     "parker": "0.0.10",
     "postcss-reporter": "^1.4.1",
     "postcss-scss": "^0.1.9",
