--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "only",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Only Framework. Development toward 3.0 (release winter 2016/2017).",
   "main": "index.js",
   "scripts": {
@@ -23,16 +23,15 @@
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.12",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect-php": "0.0.8",
-    "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-htmlmin": "^2.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
-    "gulp-minify-css": "^1.2.4",
     "gulp-parker": "^0.1.4",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
@@ -42,6 +41,7 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-uncss": "^1.0.6",
     "gulp-useref": "^3.1.0",
     "gulp-zip": "^3.2.0",
     "parker": "0.0.10",
