--- a/package.json
+++ b/package.json
@@ -1,108 +1,112 @@
 {
-	"name": "only",
-	"version": "3.0.0",
-	"description": "Only Framework (Development)",
-	"main": "index.html",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Being (Mikael Vesavuori)",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/beingstudio/only.git"
-	},
-	"license": "ISC",
-	"devDependencies": {
-		"babel-cli": "^6.18.0",
-		"babel-core": "^6.23.1",
-		"babel-eslint": "^7.1.0",
-		"babel-loader": "^6.2.10",
-		"babel-plugin-transform-class-properties": "^6.23.0",
-		"babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-polyfill": "^6.23.0",
-		"babel-preset-es2015": "^6.18.0",
-		"babel-preset-es2015-webpack": "^6.4.3",
-		"babel-preset-react": "^6.16.0",
-		"babel-preset-stage-0": "^6.16.0",
-		"babel-runtime": "^6.20.0",
-		"bower-webpack-plugin": "^0.1.9",
-		"browser-sync": "^2.17.6",
-		"colorguard": "^1.2.0",
-		"compass-mixins": "^0.12.10",
-		"critical": "^0.8.3",
-		"css-loader": "^0.26.1",
-		"del": "^2.2.2",
-		"doiuse": "^2.5.0",
-		"eslint": "^3.17.1",
-		"eslint-loader": "^1.6.1",
-		"eslint-plugin-react": "^6.8.0",
-		"exports-loader": "^0.6.3",
-		"file-loader": "^0.9.0",
-		"glob": "^7.1.1",
-		"gulp": "^3.9.1",
-		"gulp-babel": "^6.1.2",
-		"gulp-changed": "^2.0.0",
-		"gulp-check-unused-css": "^2.1.3",
-		"gulp-clean-css": "^3.0.3",
-		"gulp-compass": "^2.1.0",
-		"gulp-complexity": "^0.3.2",
-		"gulp-concat": "^2.6.1",
-		"gulp-csscss": "^0.1.2",
-		"gulp-eslint": "^3.0.1",
-		"gulp-filter": "^4.0.0",
-		"gulp-htmlmin": "^3.0.0",
-		"gulp-if": "^2.0.2",
-		"gulp-imagemin": "^3.1.1",
-		"gulp-louis": "^2.4.0",
-		"gulp-mocha": "^4.1.0",
-		"gulp-pa11y": "0.0.4",
-		"gulp-parker": "^0.1.4",
-		"gulp-phantomcss": "^0.3.0",
-		"gulp-plumber": "^1.1.0",
-		"gulp-postcss": "^6.2.0",
-		"gulp-react": "^3.1.0",
-		"gulp-rename": "^1.2.2",
-		"gulp-responsive": "^2.7.0",
-		"gulp-rsync": "^0.0.7",
-		"gulp-sass": "^2.3.2",
-		"gulp-size": "^2.1.0",
-		"gulp-sourcemaps": "^2.3.0",
-		"gulp-stylefmt": "^1.1.0",
-		"gulp-svg-sprite": "^1.3.6",
-		"gulp-uglify": "^2.0.0",
-		"gulp-uncss": "^1.0.6",
-		"html-webpack-plugin": "^2.24.1",
-		"imports-loader": "^0.7.0",
-		"lazysizes": "^3.0.0-rc4",
-		"path": "^0.12.7",
-		"postcss-cssnext": "^2.9.0",
-		"postcss-reporter": "^1.4.1",
-		"postcss-scss": "^0.3.1",
-		"preact": "^7.2.0",
-		"preact-compat": "^3.14.0",
-		"precss": "^1.4.0",
-		"promise-polyfill": "^6.0.2",
-		"psi": "^3.0.0",
-		"react": "^15.4.1",
-		"react-dom": "^15.4.1",
-		"react-redux": "^5.0.2",
-		"redux": "^3.6.0",
-		"redux-devtools": "^3.3.2",
-		"redux-thunk": "^2.2.0",
-		"require-dir": "^0.3.1",
-		"require-path": "^0.2.0",
-		"run-sequence": "^1.2.2",
-		"style-loader": "^0.13.1",
-		"stylelint": "^7.5.0",
-		"url-loader": "^0.5.7",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-source-stream": "^1.1.0",
-		"webpack": "^2.2.1",
-		"webpack-dev-server": "^1.16.2",
-		"webpack-stream": "^3.2.0",
-		"webpack-validator": "^2.3.0",
-		"webpack-vendor-chunk-plugin": "^1.0.0",
-		"whatwg-fetch": "^2.0.1"
-	}
+  "name": "only",
+  "version": "3.0.0",
+  "description": "Only Framework (Development)",
+  "main": "index.html",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Being (Mikael Vesavuori)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/beingstudio/only.git"
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.1.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-webpack": "^6.4.3",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.20.0",
+    "bower-webpack-plugin": "^0.1.9",
+    "browser-sync": "^2.17.6",
+    "colorguard": "^1.2.0",
+    "compass-mixins": "^0.12.10",
+    "critical": "^0.8.3",
+    "css-loader": "^0.26.1",
+    "del": "^2.2.2",
+    "doiuse": "^2.5.0",
+    "eslint": "^3.17.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.8.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.9.0",
+    "glob": "^7.1.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^2.0.0",
+    "gulp-check-unused-css": "^2.1.3",
+    "gulp-clean-css": "^3.0.3",
+    "gulp-compass": "^2.1.0",
+    "gulp-complexity": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-csscss": "^0.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-filter": "^4.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-louis": "^2.4.0",
+    "gulp-mocha": "^4.1.0",
+    "gulp-pa11y": "0.0.4",
+    "gulp-parker": "^0.1.4",
+    "gulp-phantomcss": "^0.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.2.0",
+    "gulp-react": "^3.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-responsive": "^2.7.0",
+    "gulp-rsync": "^0.0.7",
+    "gulp-sass": "^2.3.2",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.3.0",
+    "gulp-stylefmt": "^1.1.0",
+    "gulp-svg-sprite": "^1.3.6",
+    "gulp-uglify": "^2.0.0",
+    "gulp-uncss": "^1.0.6",
+    "html-webpack-plugin": "^2.24.1",
+    "imports-loader": "^0.7.0",
+    "lazysizes": "^3.0.0-rc4",
+    "node-sass": "^4.5.0",
+    "path": "^0.12.7",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-reporter": "^1.4.1",
+    "postcss-scss": "^0.3.1",
+    "preact": "^7.2.0",
+    "preact-compat": "^3.14.0",
+    "precss": "^1.4.0",
+    "promise-polyfill": "^6.0.2",
+    "psi": "^3.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.2",
+    "redux-thunk": "^2.2.0",
+    "require-dir": "^0.3.1",
+    "require-path": "^0.2.0",
+    "run-sequence": "^1.2.2",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.5.0",
+    "typescript": "^2.2.1",
+    "url-loader": "^0.5.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-stream": "^3.2.0",
+    "webpack-validator": "^2.3.0",
+    "webpack-vendor-chunk-plugin": "^1.0.0",
+    "whatwg-fetch": "^2.0.1"
+  }
 }
