--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Only Framework (Development)",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test1": "mocha -r ts-node/register app/scripts/test/hello.test.ts"
   },
   "author": "Being (Mikael Vesavuori)",
   "repository": {
@@ -13,6 +14,8 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/mocha": "^2.2.40",
     "awesome-typescript-loader": "^3.1.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.23.1",
@@ -29,6 +32,7 @@
     "babel-runtime": "^6.20.0",
     "bower-webpack-plugin": "^0.1.9",
     "browser-sync": "^2.17.6",
+    "chai": "^3.5.0",
     "colorguard": "^1.2.0",
     "compass-mixins": "^0.12.10",
     "critical": "^0.8.3",
@@ -98,6 +102,7 @@
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.5.0",
+    "ts-node": "^2.1.0",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
     "vinyl-buffer": "^1.0.0",
