--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Only Framework (Development)",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test1": "mocha -r ts-node/register app/scripts/test/hello.test.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Being (Mikael Vesavuori)",
   "repository": {
