--- a/package.json
+++ b/package.json
@@ -78,9 +78,16 @@
     "gulp-uncss": "^1.0.6",
     "html-webpack-plugin": "^2.24.1",
     "imports-loader": "^0.7.0",
+    "karma": "^1.5.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-typescript-preprocessor2": "^1.2.1",
+    "karma-webpack": "^2.0.3",
     "lazysizes": "^3.0.0-rc4",
     "node-sass": "^4.5.0",
     "path": "^0.12.7",
+    "phantomjs-prebuilt": "^2.1.14",
     "postcss-cssnext": "^2.9.0",
     "postcss-reporter": "^1.4.1",
     "postcss-scss": "^0.3.1",
